# wust_vision

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  dandao.py  env.bash  format.sh  gitadd.sh  read_shm_image_mmap_only.py  run.sh  sim.yaml  t.py  target.cpp  user_bashrc_copy.bash  video.py  web.py
cuda_infer/: CMakeLists.txt  armor_infer.cu  armor_infer.hpp  cvtcolor.cu  cvtcolor.hpp  letter_box.cu  letter_box.hpp  rune_infer.cu  rune_infer.hpp
ml_net/: CMakeLists.txt
ros2/: CMakeLists.txt  ros2.cpp  ros2.hpp  ros2_pub_node.cpp  ros2_pub_node.hpp  ros2_sub_node.cpp  ros2_sub_node.hpp  tf.hpp
tasks/: CMakeLists.txt  ascii_banner.hpp  config.hpp  debug.cpp  debug.hpp  imodule.hpp  main_base.hpp  mono_measure_tool.cpp  mono_measure_tool.hpp  packet_typedef.hpp  pch.hpp  sinple_img_rotate_saver.hpp  type_common.cpp  type_common.hpp  utils.cpp  utils.hpp  vision_base.cpp  vision_base.hpp  vision_serial_adapter.cpp  vision_serial_adapter.hpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor_solver.cpp  armor_solver.hpp  auto_aim.cpp  auto_aim.hpp  auto_aim_fsm.hpp  debug.cpp  debug.hpp  shooter.cpp  shooter.hpp  type.cpp  type.hpp
tasks/auto_aim/armor_control/: aimer.cpp  aimer.hpp  planner.cpp  planner.hpp  shooter.cpp  shooter.hpp  traj.hpp  very_aimer.cpp  very_aimer.hpp  very_aimer_base.cpp  very_aimer_base.hpp  very_aimer_factory.hpp  very_aimer_mpc.cpp  very_aimer_mpc.hpp  very_aimer_opt.cpp  very_aimer_opt.hpp  very_aimer_seg.cpp  very_aimer_seg.hpp
tasks/auto_aim/armor_control/gcopter/: minco.hpp  trajectory.hpp
tasks/auto_aim/armor_control/tinympc/: admm.cpp
tasks/auto_aim/armor_detect/: armor_detect_common.cpp  armor_detect_common.hpp  armor_detector_base.hpp  armor_detector_common.cpp  armor_detector_common.hpp  armor_detector_factory.hpp  armor_infer.cpp  armor_infer.hpp  armor_pose_estimator.cpp  armor_pose_estimator.hpp  detector_factory.hpp  light_corner_corrector.cpp  light_corner_corrector.hpp  number_classifier.cpp  number_classifier.hpp
tasks/auto_aim/armor_detect/ncnn/: armor_detector_ncnn.cpp  armor_detector_ncnn.hpp  armor_detector_ncnn_wrapper.cpp  armor_detector_ncnn_wrapper.hpp
tasks/auto_aim/armor_detect/number_classifier/: base.hpp  factory.hpp  number_classifier.cpp  number_classifier.hpp  number_classifier_trt.cpp  number_classifier_trt.hpp
tasks/auto_aim/armor_detect/onnxruntime/: armor_detector_onnxruntime.cpp  armor_detector_onnxruntime.hpp  armor_detector_onnxruntime_wrapper.cpp  armor_detector_onnxruntime_wrapper.hpp  armor_detector_ort.cpp  armor_detector_ort.hpp  armor_detector_ort_wrapper.cpp  armor_detector_ort_wrapper.hpp
tasks/auto_aim/armor_detect/opencv/: armor_detector_opencv.cpp  armor_detector_opencv.hpp  armor_detector_opencv_wrapper.cpp  armor_detector_opencv_wrapper.hpp
tasks/auto_aim/armor_detect/openvino/: armor_detector_openvino.cpp  armor_detector_openvino.hpp  armor_detector_openvino_wrapper.cpp  armor_detector_openvino_wrapper.hpp
tasks/auto_aim/armor_detect/tensorrt/: armor_detector_tensorrt.cpp  armor_detector_tensorrt.hpp  armor_detector_tensorrt_wrapper.cpp  armor_detector_tensorrt_wrapper.hpp  armor_detector_trt.cpp  armor_detector_trt_wrapper.cpp  armor_detector_trt_wrapper.hpp
tasks/auto_aim/armor_omni/: armor_omni.cpp  armor_omni.hpp
tasks/auto_aim/armor_optimize/: ba_solver.cpp  ba_solver.hpp  graph_optimizer.cpp  graph_optimizer.hpp
tasks/auto_aim/armor_tracker/: one_ca_tracker.cpp  one_ca_tracker.hpp  one_tracker.cpp  one_tracker.hpp  target.cpp  target.hpp  target_crazy.cpp  target_crazy.hpp  target_test.cpp  tracker.cpp  tracker.hpp  tracker_crazy.cpp  tracker_crazy.hpp  tracker_manager.cpp  tracker_manager.hpp  trackerv2.cpp  trackerv2.hpp  trackerv3.cpp  trackerv3.hpp
tasks/auto_aim/armor_tracker/motion_models/: factorypd.hpp  motion_model_crazy.hpp  motion_modela.hpp  motion_modelonea.hpp  motion_modeloneca.hpp  motion_modelr.hpp  motion_modelrypd.hpp  motion_modelypd.hpp  motion_modelypdv2.hpp  tracker.hpp
tasks/auto_aim/armor_where/: armor_where.cpp  armor_where.hpp
tasks/auto_buff/: CMakeLists.txt  auto_buff.cpp  auto_buff.hpp  curve_fitter.cpp  curve_fitter.hpp  debug.cpp  debug.hpp  rune_solver.cpp  rune_solver.hpp  type.cpp  type.hpp
tasks/auto_buff/motion_models/: motion_modelr.hpp  motion_modelrypd.hpp
tasks/auto_buff/rune_control/: aimer.cpp  aimer.hpp
tasks/auto_buff/rune_detect/: detect_factory.hpp  rune_detector_base.hpp  rune_detector_cv.cpp  rune_detector_cv.hpp  rune_infer.cpp  rune_infer.hpp
tasks/auto_buff/rune_detect/ncnn/: rune_detector_ncnn.cpp  rune_detector_ncnn.hpp  rune_detector_ncnn_wrapper.cpp  rune_detector_ncnn_wrapper.hpp
tasks/auto_buff/rune_detect/onnxruntime/: rune_detector_ort.cpp  rune_detector_ort.hpp  rune_detector_ort_wrapper.cpp  rune_detector_ort_wrapper.hpp
tasks/auto_buff/rune_detect/openvino/: rune_detector_openvino.cpp  rune_detector_openvino.hpp  rune_detector_openvino_wrapper.cpp  rune_detector_openvino_wrapper.hpp
tasks/auto_buff/rune_detector/: rune_detector.cpp  rune_detector.hpp  scut_robot_detector.cpp  scut_robot_detector.hpp
tasks/auto_buff/rune_optimize/: ba_solver.cpp  ba_solver.hpp  graph_optimizer.cpp  graph_optimizer.hpp
tasks/auto_buff/rune_tracker/: rune_target.cpp  rune_target.hpp  rune_tracker.cpp  rune_tracker.hpp  spd_fitter.hpp
tasks/auto_buff/rune_where/: rune_where.cpp  rune_where.hpp
tasks/auto_guidance/: CMakeLists.txt  auto_guidance.cpp  auto_guidance.hpp  debug.cpp  debug.hpp  type.hpp
tasks/auto_guidance/guidance_detector/: detector_base.hpp  detector_factory.hpp  green_light_infer.cpp  green_light_infer.hpp
tasks/auto_guidance/guidance_tracker/: guidance_target.cpp  guidance_target.hpp  guidance_tracker.cpp  guidance_tracker.hpp
tasks/auto_offset/: CMakeLists.txt  auto_offset.cpp  auto_offset.hpp
tasks/auto_sniper/: CMakeLists.txt  auto_sniper.cpp  auto_sniper.hpp  k1_solver.hpp  offset_helper.hpp  trajectory_solver.hpp  voxel_map.hpp
tasks/utils/: config.hpp  debug_utils.hpp  main_base.hpp  sinple_img_rotate_saver.hpp  utils.cpp  utils.hpp
(+360 files in other folders)
